--- a/src/style.css
+++ b/src/style.css
@@ -88,15 +88,16 @@ body {
  * Text styles
  */
 .tiny {
-    font-size: 1.2rem;
-}
-
-.small {
     font-size: 1.5rem;
 }
 
-.medium {
+.small {
     font-size: 2rem;
+}
+
+.medium {
+    font-size: 2.5rem;
+    margin-top: 1.5rem;
 }
 
 .bread {
@@ -112,15 +113,13 @@ body {
 p {
     margin: 0;
     text-transform: capitalize;
-}
-
-p {
     padding-top: 0.5em;
     font-family: 'Lato', sans-serif;
 }
 
 h2 {
     font-family: 'Merriweather', serif;
+    margin: 0;
 }
 
 span {
